After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 696087 - background: Fix the desaturate effect when on its own
background: Fix the desaturate effect when on its own
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-03-18 17:45 UTC by Jasper St. Pierre (not reading bugmail)
Modified: 2013-03-18 19:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
background: Fix the desaturate effect when on its own (1.52 KB, patch)
2013-03-18 17:45 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Jasper St. Pierre (not reading bugmail) 2013-03-18 17:45:51 UTC
We need to make sure cogl_texel is set to something,
otherwise we'll have junk.
Comment 1 Jasper St. Pierre (not reading bugmail) 2013-03-18 17:45:53 UTC
Created attachment 239168 [details] [review]
background: Fix the desaturate effect when on its own
Comment 2 Owen Taylor 2013-03-18 19:13:47 UTC
Review of attachment 239168 [details] [review]:

Looks right to me
Comment 3 Jasper St. Pierre (not reading bugmail) 2013-03-18 19:23:29 UTC
Attachment 239168 [details] pushed as e216b6c - background: Fix the desaturate effect when on its own